Update Readme table and add overflow:auto to help collapsing parent issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: 'Barlow Condensed', sans-serif;
-  /*background-color: #E6EFE9;*/
+  background-color: #E6EFE9;
 }
 
 .nav {
@@ -14,13 +14,16 @@ body {
 }
 
 .nav ul {
+  background-color: black;
   list-style: none;
   font-size: 20px;
-  display: inline;
+  height: 30px;
 }
 
 .nav li {
+  background-color: black;
   float: left;
+  display: inline;
   padding-right: 10px;
 }
 
@@ -84,10 +87,9 @@ button:hover {
 
 .gallery {
   clear: both;
-  background-color: #E6EFE9;
   position: relative;
   width: 100%;
-  height: 450px;
+  overflow: auto;
 }
 
 .gallery h2 {
@@ -109,6 +111,7 @@ button:hover {
 }
 
 .features-content {
+  float: left;
   text-align: left;
   position: relative;
   width: 50%;
@@ -122,35 +125,35 @@ button:hover {
   width: 200px;
   height: 200px;
   object-fit: cover;
+  border: 1px solid black;
 }
 
 .whole-gallery {
-  width: 50%;
-  float: left;
-  position: relative;
-  left: 55%;
-  top: -365px;
+  float: right;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 .specs {
-  clear: both;
-  width: 100%;
-  background-color: #E6EFE9;
+  background-color: #C2EABA;
+  overflow: auto;
+  padding: 20px;
 }
 
 .details {
-  width: 50%;
-  padding: 20px;
-  position: relative;
+  padding: 10px;
+  float: left;
+}
+
+.table-container {
+  float: right;
+  padding: 10px;
 }
 
 table {
   background-color: #A7C4A0;
-  position: relative;
-  left: 50%;
-  top: -200px;
-  width: 50%;
   border: 2px solid black;
+  margin-right: 10px;
 }
 
 thead {
